@@ -1,9 +1,11 @@
 CHANGES IN FLTK 1.3.0
 
-	- Added OS X cursor control to Fl_Input (STR #2169)
-	- Fixed control key keycodes with modifiers on OS X
+	- Fix for multiple popups, when dragging and calling fl_alert()
+	  and friends from the callback (STR #2159)
 	- Avoiding crashes for recursive common dialogs (this does not 
 	  fix the issue at hand yet) (STR #1986, 2150)
+	- Added OS X cursor control to Fl_Input (STR #2169)
+	- Fixed control key keycodes with modifiers on OS X
 	- Added menu shortcut alignment for OS X
 	- Fixed bad system menu hadling in OS X (STR #2153)
 	- Fixed File Input mouse pointer dragging (STR #2181)
